# environment

./: README.md
dind/: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml
fastapi/: README.md  docker-compose.dev.yml  docker-compose.yml
fastapi/api/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  pyproject.toml
fastapi/api/.devcontainer/: devcontainer.json
fastapi/api/app/app/: main.py
fastapi/api/app/app/db/: database.py  models.py
fastapi/api/app/app/routers/: files.py  items.py  times.py  users.py
fastapi/api/tests/: test_main.py
fastapi/db/: .gitignore  Dockerfile
go/: Dockerfile  README.md  docker-compose.yml
go/.devcontainer/: devcontainer.json  docker-compose.yml
jupyter/: README.md
k8s/: README.md  Vagrantfile
k8s/shell/: common.sh  master.sh  worker.sh
linux-container/: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
linux-vm/: .gitignore  README.md
python/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
python/.devcontainer/: devcontainer.json
python/src/: start.sh
react/: docker-compose.yml
react/.devcontainer/: devcontainer.json
react/app/: .gitignore  README.md
splunk/: .env.sample  .gitignore  README.md  docker-compose.yml
splunk/ansible/: data_uploader.yml  prep.yml  terminate.yml
splunk/splunk/: Dockerfile  default.yml
swarm/: README.md  Vagrantfile
swarm/shell/: common.sh  manager.sh  worker.sh
vscode-server/: .gitignore  README.md  Vagrantfile
vscode-server/shell/: setup.sh
wekan/: Dockerfile  docker-compose.yml
(+296 files in other folders)
