[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.96.0"
sqlalchemy = "^2.0.15"
psycopg2 = "^2.9.6"
uvicorn = "^0.22.0"
gunicorn = "^20.1.0"
flake8 = "^6.0.0"
black = "^23.3.0"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"